Fixed: wording, menus, header spacing

--- a/css/about_us.css
+++ b/css/about_us.css
@@ -69,7 +69,7 @@ a
     font-family: 'Montserrat-Bold', sans-serif;
 }
 
-@media only screen and (max-width: 600px)
+@media only screen and (max-width: 1024px)
 {
     body
     {
@@ -145,7 +145,7 @@ a
 
     .menu
     {
-        padding: 0px;
+        padding: 20px;
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: 1fr;
@@ -157,21 +157,16 @@ a
     {
         color: white;
         justify-self: center;
+        font-size: 225%;
     }
     
     .menu > div
     {
-        padding: 20px 0px 20px 0px;
         grid-column: 1 / -1;
         display: grid;
         grid-template-columns: 1fr;
         justify-items: center;
-    }
-
-    .menu > div > hr 
-    {
-        color: white;
-        height: 1px;
+        grid-gap: 10px;
     }
 
     .menu > div > a 
@@ -179,12 +174,12 @@ a
         text-decoration: none;
         color: white;
         padding: 5px 15px 5px 15px;
-        /* border: 1px solid white; */
+        border: 1px solid white;
         width: 100%;
         text-align: center;
     }
 
-    .menu > div> a:hover
+    .menu > div > a:hover
     {
         background-color: white;
         color: black;
@@ -462,7 +457,7 @@ a
     {
         grid-column: 1 / -1;
         grid-row: 1 / -1;
-        color: #5f9e43;
+        color: black;
         text-align: center;
         padding: 10px;
         justify-self: center;
@@ -474,7 +469,7 @@ a
     /*----------------------------------------------- */
 }
 
-@media only screen and (min-width: 600px)
+@media only screen and (min-width: 1024px)
 {
 
 /*------------------------------------------------*/
@@ -521,13 +516,12 @@ a
 
     .menu > div
     {
-        padding: 0px 20% 0px 20%;
+        padding: 10px 5% 10px 5%;
         grid-column: 1 / -1;
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr;
         justify-items: center;
         grid-gap: 10px;
-        background-color: gray;
     }
 
     .menu > div > a 
@@ -535,8 +529,8 @@ a
         font-size: 125%;
         text-decoration: none;
         color: white;
-        padding: 10px 15px 10px 15px;
-        /* border: 1px solid white; */
+        padding: 5px 15px 5px 15px;
+        border: 1px solid white;
         width: 100%;
         text-align: center;
         font-weight: bold;
@@ -822,7 +816,7 @@ a
     {
         grid-column: 1 / -1;
         grid-row: 1 / -1;
-        color: #5f9e43;
+        color: black;
         text-align: center;
         padding: 10px;
         justify-self: center;
