--- a/css/our_network.css
+++ b/css/our_network.css
@@ -156,7 +156,8 @@ a
     .menu > h1
     {
         color: white;
-        justify-self: center;
+        justify-self: center; 
+        font-size: 150%;
     }
     
     .menu > div
@@ -199,12 +200,6 @@ a
         grid-gap: 20px;
     }
 
-    .content > h1
-    {
-        font-style: italic;
-        font-size: 200%;
-    }
-
     .content > p 
     {
         font-size: 115%;
@@ -223,7 +218,7 @@ a
         grid-column: 2 / 3;
         display: grid;
         grid-template-columns: 1fr;
-        grid-gap: 80px;
+        grid-gap: 60px;
         padding: 0px;
         margin: 0px;
     }
@@ -312,7 +307,7 @@ a
         height: 5px;
         background-color: #5f9e43;
         border-radius: 1px;
-        margin: 4px 0;
+        margin: 4px 0px;
         transition: .4s;
     }
 
@@ -498,7 +493,7 @@ a
     {
         grid-column: 1 / -1;
         grid-row: 1 / -1;
-        color: #5f9e43;
+        color: black;
         text-align: center;
         padding: 10px;
         justify-self: center;
@@ -899,7 +894,7 @@ a
         {
             grid-column: 1 / -1;
             grid-row: 1 / -1;
-            color: #5f9e43;
+            color: black;
             text-align: center;
             padding: 10px;
             justify-self: center;
